using System.Collections;
using System.Collections.Generic;
using UnityEngine;

public class TagManager 
{
    // TAG
    public static string PLAYER_TAG = "Player";
    public static string PLAYER_HEALTH_TAG = "PlayerHealth";
    public static string BACKGROUND_TAG = "Background";
    public static string BULLET_TAG = "Bullet";
    public static string FENCE_TAG = "Fence";
    public static string ROCKET_MISSILE_TAG = "RocketMissile";
    public static string FIRE_BULLET_TAG = "FireBullet";
    public static string ZOMBIE_HEALTH_TAG = "ZombieHealth";
    public static string MELEE_WEAPON_TAG = "MeleeWeapon";
    public static string COIN_TAG = "Coin";
    public static string FINISH_TAG = "Finish";
    public static string ENEMY_TAG = "Enemy";
    public static string MESSAGE_TAG = "Message";

    // NAMES
    public static string RIGHT_ARM = "ArmR1";

    // ANIMATIONS AND TRIGGERS
    public static string RUN_PARAMETER = "Run";
    public static string ATTACK_PARAMETER = "Attack";
    public static string TYPE_WEAPON_PARAMETER = "TypeWeapon";
    public static string SWITH_PARAMETER = "Switch";
    public static string GET_HURT_PARAMETER = "GetHurt";
    public static string DEAD_PARAMETER = "Dead";
    public static string RANDOM_PARAMETER = "Random";
    public static string ZOMBIE_MOVE_ANIMATION = "Move";
    public static string ZOMBIE_SHOOT = "Shoot";

    // LEVEL NAMES
    public static string LEVEL_1_NAME = "Game";
    public static string MAIN_MENU_NAME = "Main Menu";


    //PlayerPrefs Keys

    public static string COIN_KEY = "Coin";
    public static string SCENE_INDEX_KEY = "SceneIndex";
    public static string UNLOCK_RITUZA_KEY = "Rituza";
    public static string UNLOCK_AK_KEY = "AK";
    public static string UNLOCK_M3_KEY = "M3";
    public static string UNLOCK_FIRE_KEY = "Fire";
    public static string UNLOCK_SNIPER_KEY = "Sniper";
    public static string UNLOCK_ROCKET_KEY = "Rocket";
}
